Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-66583

Accessible.name for Qt Controls 2 Button cannot be set

XMLWordPrintable

    • 463898f0765b83f6c391f6802a0ee06796f9f6d2 (qt/qtquickcontrols2/5.14)

      I need to set the Accessible.name on a Button for automation purposes. This was working as expected in Qt Quick Controls 1.5. However, in it Quick Controls 2.2, the Accessible.name field is always set to the Button.text and cannot be changed. In my case, not all the buttons have text, and some only have an image, therefore it doesn't make sense to add a text field only for the use in accessibility. I would like to be able to set Accessible.name independent of the button's text.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            mitch_curtis Mitch Curtis
            nikho Nil Khosh
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes