Respect user-set Accessible.name

Check if the user has set Accessible.name before setting it to the
control's text/title/etc.

Fixes: QTBUG-66583
Change-Id: I8b2c8ab3f8a8ae8e76c8e6a241260b7f90eca254
Reviewed-by: Liang Qi <liang.qi@qt.io>